test/classes/initializers/phase1/badDependence.good
badDependence.chpl:11: error: explicit initialization of field "f2" relies on later field
badDependence.chpl:12: error: explicit initialization of field "f3" relies on later field
